--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,10 +1,13 @@
 
-<%= simple_form_for(@opinion) do |f| %>
+<%= simple_form_for(@user) do |f| %>
   <%= f.error_notification %>
   <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
   <div class="form-inputs">
-    <%= f.input :text %>
+    <%= f.input :username %>
+    <%= f.input :fullname %>
+    <%= f.input :photo %>
+    <%= f.input :coverimage %>
   </div>
 
   <div class="form-actions">
