--- a/app/views/followings/_form.html.erb
+++ b/app/views/followings/_form.html.erb
@@ -1,11 +1,11 @@
 
-<%= simple_form_for(@opinion) do |f| %>
+<%= simple_form_for(@following) do |f| %>
   <%= f.error_notification %>
   <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
   <div class="form-inputs">
-    <%= f.input :text %>
-    <%= f.input :author_id %>
+    <%= f.input :follower_id %>
+    <%= f.input :followed_id %>
   </div>
 
   <div class="form-actions">
