--- a/app/views/opinions/show.html.erb
+++ b/app/views/opinions/show.html.erb
@@ -5,5 +5,10 @@
   <%= @opinion.text %>
 </p>
 
+<p>
+  <strong>Author:</strong>
+  <%= @opinion.author_id %>
+</p>
+
 <%= link_to 'Edit', edit_opinion_path(@opinion) %> |
 <%= link_to 'Back', opinions_path %>
