--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,28 @@
   </head>
 
   <body>
+    <nav class="nav">
+    <%= link_to 'Stay in touch', root_path %>
+    <div class="menu">
+      <div class="menu-item">
+        <%= menu_link_to 'Timeline', posts_path %>
+      </div>
+      <div class="menu-item">
+        <%= menu_link_to 'All users', users_path %>
+      </div>
+      <div class="menu-item">
+        <% if current_user %>
+          <p> <%= current_user.name %>  </p>
+        <% end %>
+      </div>
+    </div>
+    <% if current_user %>
+      <%= link_to 'Sign out', destroy_user_session_path, method: :delete %>
+    <% else %>
+      <%= link_to 'Sign in', user_session_path %>
+    <% end %>
+  </nav>
+
     <% if flash[:notice] %>
       <div class = "notification is-primary global-notification"> 
         <p class="alert"> <%= alert %> </p>
