--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,3 +15,194 @@
  */
 
  @import "bulma";
+
+//  general
+ .color-1{
+    color: #667B90
+ }
+
+ .color-2{
+    color: #BDCAD5
+ }
+
+ .font-fam{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", 
+    Roboto, Ubuntu, "Helvetica Neue", sans-serif; 
+ }
+
+ .font-1 {
+     font-size: 1rem;
+ }
+
+ // body 
+
+//  body {
+//      width: 768px;
+//  }
+
+
+// 
+
+ .main-nav {    
+    width: 100%;
+    height: 10vh;
+    display: flex;
+    flex-direction: row;
+    // background: #4FA0DF;
+
+    .nav-left {
+        width:17%;
+        background-color: #213246;
+        height: 100%;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        .profile-img {
+            width: 30%;
+            height: 70%;
+            margin-left: 10%;            
+            background-color: white;
+        }
+        .username {
+            width: 60%;
+            padding: 5%;
+        }
+    }
+    .nav-middle {
+        width: 60%;
+        background: #4FA0DF;
+    }
+
+    .nav-right {
+        width: 23%;
+        height: 100%;
+        display: flex;   
+        flex-direction: row;     
+        background: #4FA0DF;
+        align-items: center;
+        justify-content: space-around;   
+        
+        .iconify {
+            width: 3rem;
+        }
+    }
+ }
+
+ .front {
+     width: 100%;
+     height: 800px;     
+    //  background-color: yellow;
+
+    display: flex;
+    flex-direction: row;
+
+    .left-col {
+        width:17%;
+        background-color: #213246;
+        .following {
+            height: 3rem;
+            // background-color: green;
+
+            display: flex;
+            flex-direction: row;           
+            
+            .follow-part {
+                width: 50%;
+                border: 1px solid;
+                text-align: center;      
+            }
+        }
+
+        .main-link-lists {
+            width: 100%;
+            height: 2rem;               
+            // background-color: white;                    
+            padding-left: 1rem;
+            border: 1px solid;
+            display: flex;
+            align-items: center;        
+        }
+     }
+
+    .middle-col {
+        width: 60%;
+        background-color: #F5F6F8;
+        display: flex;
+        flex-direction: column;
+        border: 1px solid;
+        .front-menu {
+            width: 100%;
+            height: 3rem;
+            border: 1px solid;
+            .menu-title {
+                width: 6rem;
+                height: 100%;
+                display: flex;
+                align-items: center;
+                justify-content: center;                
+            }            
+        }
+        .opinion-section {
+            width: 70%;
+            height: fit-content;
+            border: 1px solid;
+            background-color: white;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            margin: 15%;
+            .opinion-title {
+                width: 80%;                
+            }
+            .opinion-field {
+                width: 80%;
+                height: 2rem;
+                border: 1px solid;
+                margin: 1rem;
+            }             
+        }
+
+        .opinions-section {
+            width: 70%;
+            height: fit-content;
+            border: 1px solid;
+            background-color: white;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            margin: 15%;
+            .opinions-title {
+                width: 80%;                
+            }
+            .opinion-story {
+                width: 80%;
+                display: flex;
+                flex-direction: row;
+                
+                .opinion-profile {
+                    width: 30%;
+                    background-color: red;
+                }
+                .opinion-body {
+                    width: 70%;
+                }
+            }    
+        }
+    }
+
+    .right-col {
+        width: 23%;
+        background-color: #F5F6F8;
+        border: 1px solid;
+        .title {
+            width: 100%;
+            height: 3rem;
+            border: 1px solid;
+            display: flex; 
+            align-items: center; 
+            justify-content: center;          
+        }
+    }
+ }
