--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -12,7 +12,7 @@
       <th colspan="3"></th>
     </tr>
   </thead>
-
+  <% if @users.any? %>
   <tbody>
     <% @users.each do |user| %>
       <tr>
@@ -26,6 +26,7 @@
       </tr>
     <% end %>
   </tbody>
+  <% end %>
 </table>
 
 <br>
