--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -28,11 +28,20 @@
  .font-fam{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", 
     Roboto, Ubuntu, "Helvetica Neue", sans-serif; 
+    font-weight: 600;
  }
 
  .font-1 {
      font-size: 1rem;
  }
+ 
+
+ .font-1p5 {
+    font-size: 1.5rem;
+}
+
+
+
 
  // body 
 
@@ -57,6 +66,7 @@
         display: flex;
         flex-direction: row;
         align-items: center;
+        justify-content: center;
         .profile-img {
             width: 30%;
             height: 70%;
@@ -67,10 +77,22 @@
             width: 60%;
             padding: 5%;
         }
+
     }
     .nav-middle {
         width: 60%;
         background: #4FA0DF;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        .logo {
+            width: 50%;
+        }
+        .logout {
+            width: 50%;
+            height: fit-content;
+            text-align: right;            
+        }
     }
 
     .nav-right {
