--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,17 +17,32 @@
     <header>
       <nav class= "main-nav">       
         <div class="nav-left">
+        <% if current_user %>
           <span class="profile-img"></span>
           <span class="username color-1 font-fam">HENOK MEKONNEN </span>
+        <% else %>
+          <span class="logo-text font-fam color-2 font-1p5">OPINION</span>
+        <% end %>
         </div>
-        <div class="nav-middle">        
+        <div class="nav-middle">
+          <span class="logo"> </span>
+          <% if current_user %>
+          <span class="logout"> <%= link_to 'Log Out', session_path(session), method: :delete %> </span>
+          <% end %>       
         </div>
+        
         <div class="nav-right">
+        <% if current_user %>
           <span class="iconify" data-icon="fluent:edit-16-filled" data-inline="false"></span>
           <span class="iconify" data-icon="fluent:mail-24-filled" data-inline="false"></span>
           <span class="iconify" data-icon="fa-solid:search" data-inline="false"></span>
           <span class="iconify" data-icon="clarity:settings-solid" data-inline="false"></span>
+        <% else %>
+          <span class = "font-fam"> <%= link_to 'Sign In', new_session_path %> </span>
+          <span class = "font-fam"> <%= link_to 'Sign Up', new_user_path %> </span>
+        <% end %>
         </div>
+        
       </nav>
     </header>
     <!--
