--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,6 +29,7 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", 
     Roboto, Ubuntu, "Helvetica Neue", sans-serif; 
     font-weight: 600;
+    text-decoration: none;
  }
 
  .font-1 {
@@ -225,6 +226,34 @@
             display: flex; 
             align-items: center; 
             justify-content: center;          
+        }
+
+        .opinions-section {
+            width: 70%;
+            height: fit-content;
+            border: 1px solid;
+            background-color: white;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            margin: 15%;
+            .opinions-title {
+                width: 80%;                
+            }
+            .opinion-story {
+                width: 80%;
+                display: flex;
+                flex-direction: row;
+                
+                .opinion-profile {
+                    width: 30%;
+                    background-color: red;
+                }
+                .opinion-body {
+                    width: 70%;
+                }
+            }    
         }
     }
  }
