--- a/app/views/opinions/_form.html.erb
+++ b/app/views/opinions/_form.html.erb
@@ -1,14 +1,11 @@
 
-<%= simple_form_for(@opinion) do |f| %>
-  <%= f.error_notification %>
-  <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
+<%= form_for(@opinion) do |f| %> 
 
   <div class="form-inputs">
-    <%= f.input :text %>
-    <%= f.input :author_id %>
+    <%= f.text_field :text, placeholder: "Enter your opinion", :class => 'text' %>     
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit %>
+    <%= f.submit 'submit', :class => 'submit'%>
   </div>
 <% end %>
