--- a/app/views/opinions/index.html.erb
+++ b/app/views/opinions/index.html.erb
@@ -2,25 +2,25 @@
       <section class = "left-col">
         <div class = "following">
           <div class="follow-part">
-            <p class="color-2">120</p>
-            <p class="color-1">Following</p>
+            <p class="color-2 font-fam">120</p>
+            <p class="color-1 font-fam">Following</p>
           </div>
           <div class="follow-part">
-            <p class="color-2">340</p>
-            <p class="color-1">Followers</p>
+            <p class="color-2 font-fam">340</p>
+            <p class="color-1 font-fam">Followers</p>
           </div>          
         </div>
         <ul class = "main-links color-1">
-          <li class="main-link-lists"> <%= link_to 'HOME', root_path %> </li>
-          <li class="main-link-lists"> <%= link_to 'CONNECT', root_path %> </li>
-          <li class="main-link-lists"> <%= link_to 'DISCOVER', root_path %> </li>
-          <li class="main-link-lists"> <%= link_to 'PROFILE', root_path %> </li>
-          <li class="main-link-lists"> <%= link_to 'STATISTICS', root_path %></li>
+          <li class="main-link-lists font-fam"> <%= link_to 'HOME', root_path %> </li>
+          <li class="main-link-lists font-fam"> <%= link_to 'CONNECT', root_path %> </li>
+          <li class="main-link-lists font-fam"> <%= link_to 'DISCOVER', root_path %> </li>
+          <li class="main-link-lists font-fam"> <%= link_to 'PROFILE', root_path %> </li>
+          <li class="main-link-lists font-fam"> <%= link_to 'STATISTICS', root_path %></li>
         </ul>
       </section>
       <section class = "middle-col">
         <div class="front-menu">
-          <span class="menu-title">OPINIONS</span>
+          <span class="menu-title font-fam">OPINIONS</span>
         <div>
 
         <section class = "opinion-section">
