--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -41,6 +41,11 @@
     font-size: 1.5rem;
 }
 
+.box {
+    border: gray;
+    
+}
+
 
 
 
@@ -69,10 +74,11 @@
         align-items: center;
         justify-content: center;
         .profile-img {
-            width: 30%;
-            height: 70%;
+            width: 25%;
+            height: 80%;
             margin-left: 10%;            
             background-color: white;
+            border-radius: 8px;
         }
         .username {
             width: 60%;
@@ -124,6 +130,8 @@
         background-color: #213246;
         .following {
             height: 3rem;
+            border-top: 1px solid;
+            border-bottom: 1px solid;
             // background-color: green;
 
             display: flex;
@@ -131,8 +139,9 @@
             
             .follow-part {
                 width: 50%;
-                border: 1px solid;
-                text-align: center;      
+                // border: 2px solid;
+                text-align: center; 
+                border-right: 1px solid; 
             }
         }
 
@@ -141,7 +150,7 @@
             height: 2rem;               
             // background-color: white;                    
             padding-left: 1rem;
-            border: 1px solid;
+            // border: 1px solid;
             display: flex;
             align-items: center;        
         }
@@ -152,11 +161,11 @@
         background-color: #F5F6F8;
         display: flex;
         flex-direction: column;
-        border: 1px solid;
+        // border: 1px solid;
         .front-menu {
             width: 100%;
             height: 3rem;
-            border: 1px solid;
+            border-bottom: 1px solid;
             .menu-title {
                 width: 6rem;
                 height: 100%;
@@ -166,50 +175,58 @@
             }            
         }
         .opinion-section {
-            width: 70%;
+            width: 90%;
             height: fit-content;
-            border: 1px solid;
+            border-radius: 10px;
             background-color: white;
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            margin: 15%;
+            margin: 5%;
             .opinion-title {
-                width: 80%;                
+                width: 90%;   
+                // border: 1px solid;
+                padding-top:0.5rem ; 
+                padding-bottom: 0.5rem;            
             }
             .opinion-field {
-                width: 80%;
+                width: 90%;
                 height: 2rem;
                 border: 1px solid;
-                margin: 1rem;
+                margin-bottom: 1rem;
             }             
         }
 
         .opinions-section {
-            width: 70%;
+            width: 90%;
             height: fit-content;
-            border: 1px solid;
+            border-radius: 10px;
             background-color: white;
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            margin: 15%;
+            margin: 5%;
             .opinions-title {
-                width: 80%;                
+                width: 90%;
+                border-bottom: 1px solid;
+                margin-top: 2rem;
+                margin-bottom: 2rem;          
             }
             .opinion-story {
-                width: 80%;
+                width: 90%;
                 display: flex;
                 flex-direction: row;
-                
+                margin-bottom: 2rem;
                 .opinion-profile {
-                    width: 30%;
+                    width: 4rem;
+                    height: 4rem;
                     background-color: red;
                 }
                 .opinion-body {
-                    width: 70%;
+                    // width: 70%;
+                    margin-left: 1rem;
                 }
             }    
         }
@@ -218,37 +235,43 @@
     .right-col {
         width: 23%;
         background-color: #F5F6F8;
-        border: 1px solid;
+        border-left: 1px solid;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         .title {
-            width: 100%;
+            width: 90%;
             height: 3rem;
-            border: 1px solid;
+            border-bottom: 1px solid;
             display: flex; 
             align-items: center; 
             justify-content: center;          
         }
 
         .opinions-section {
-            width: 70%;
+            width: 90%;
             height: fit-content;
-            border: 1px solid;
-            background-color: white;
+            // border: 1px solid;
+            // background-color: white;
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            margin: 15%;
+            margin: 5%;
             .opinions-title {
-                width: 80%;                
+                width: 100%;                
             }
             .opinion-story {
-                width: 80%;
+                width: 100%;
                 display: flex;
                 flex-direction: row;
-                
+                margin-bottom: 2rem;                
                 .opinion-profile {
-                    width: 30%;
+                    width: 4rem;
+                    height: 4rem;
                     background-color: red;
+                    border-radius: 2rem;
+                    margin-right: 1rem;
                 }
                 .opinion-body {
                     width: 70%;
