--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,16 +1,12 @@
 
-<%= simple_form_for(@user) do |f| %>
-  <%= f.error_notification %>
-  <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
+
+<%= form_for(@opinion) do |f| %> 
 
   <div class="form-inputs">
-    <%= f.input :username %>
-    <%= f.input :fullname %>
-    <%= f.input :photo %>
-    <%= f.input :coverimage %>
+    <%= f.text_field :text, placeholder: "Enter your opinion", :class => 'text' %>     
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit %>
+    <%= f.submit 'submit', :class => 'submit'%>
   </div>
 <% end %>
