--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -60,7 +60,7 @@
 
  .main-nav {    
     width: 100%;
-    height: 10vh;
+    height: fit-content;
     display: flex;
     flex-direction: row;
     // background: #4FA0DF;
@@ -68,22 +68,21 @@
     .nav-left {
         width:17%;
         background-color: #213246;
-        height: 100%;
+        padding: 1rem;
         display: flex;
         flex-direction: row;
         align-items: center;
         justify-content: center;
         .profile-img {
-            width: 25%;
-            height: 80%;
-            margin-left: 10%;            
+            width: 3rem;
+            height: 3rem;                
+            margin-right: 1rem;       
             background-color: white;
             border-radius: 8px;
         }
-        .username {
-            width: 60%;
-            padding: 5%;
-        }
+        // .username {            
+            
+        // }
 
     }
     .nav-middle {
@@ -104,7 +103,7 @@
 
     .nav-right {
         width: 23%;
-        height: 100%;
+        // height: 100%;
         display: flex;   
         flex-direction: row;     
         background: #4FA0DF;
@@ -129,7 +128,7 @@
         width:17%;
         background-color: #213246;
         .following {
-            height: 3rem;
+            height: fit-content;
             border-top: 1px solid;
             border-bottom: 1px solid;
             // background-color: green;
@@ -139,20 +138,28 @@
             
             .follow-part {
                 width: 50%;
+                height: 4rem;
+                display: flex;
+                flex-direction: column;
                 // border: 2px solid;
-                text-align: center; 
+                justify-content: center; 
+                align-items: center;
                 border-right: 1px solid; 
             }
         }
 
         .main-link-lists {
             width: 100%;
-            height: 2rem;               
+            padding-top: 1rem;
+            padding-bottom: 1rem;               
             // background-color: white;                    
             padding-left: 1rem;
             // border: 1px solid;
             display: flex;
-            align-items: center;        
+            align-items: center;
+            .link-iconify {
+                margin-right: 0.5rem;
+            }
         }
      }
 
@@ -162,10 +169,16 @@
         display: flex;
         flex-direction: column;
         // border: 1px solid;
+        .back-img {
+            width: 100%;
+            height: 15rem;
+            background-color: gray;            
+        }
         .front-menu {
             width: 100%;
-            height: 3rem;
-            border-bottom: 1px solid;
+            height: 4rem;
+            border-bottom: 2px solid;
+            border-color: rgb(233, 228, 228);
             .menu-title {
                 width: 6rem;
                 height: 100%;
@@ -184,6 +197,8 @@
             align-items: center;
             justify-content: center;
             margin: 5%;
+            border: 2px solid;
+            border-color: rgb(233, 228, 228);
             .opinion-title {
                 width: 90%;   
                 // border: 1px solid;
@@ -193,8 +208,9 @@
             .opinion-field {
                 width: 90%;
                 height: 2rem;
-                border: 1px solid;
+                border: 2px solid;
                 margin-bottom: 1rem;
+                border-color: rgb(233, 228, 228);
             }             
         }
 
@@ -208,9 +224,12 @@
             align-items: center;
             justify-content: center;
             margin: 5%;
+            border: 2px solid;
+            border-color: rgb(233, 228, 228);
             .opinions-title {
                 width: 90%;
-                border-bottom: 1px solid;
+                border-bottom: 2px solid;
+                border-color: rgb(233, 228, 228);
                 margin-top: 2rem;
                 margin-bottom: 2rem;          
             }
@@ -227,6 +246,7 @@
                 .opinion-body {
                     // width: 70%;
                     margin-left: 1rem;
+                    
                 }
             }    
         }
@@ -235,20 +255,77 @@
     .right-col {
         width: 23%;
         background-color: #F5F6F8;
-        border-left: 1px solid;
+        border-left: 2px solid;
+        border-color: rgb(233, 228, 228);
         display: flex;
         flex-direction: column;
         align-items: center;
+        .show-profile{
+            width: 100%;
+            height: 15rem;
+            border-bottom: 2px solid;
+            border-color: rgb(233, 228, 228);
+            .show-article{
+                height: 11rem;
+                border-bottom: 2px solid;
+                border-color: rgb(233, 228, 228);
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                .photo-wrapper{
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: center;
+                    align-items: center;
+                        .user-img{
+                            width: 4rem;
+                            height: 4rem;
+                            background-color: cyan;
+                            margin-right: 1rem;
+                            margin-left: 1rem;                        
+                        }
+                    .iconify{
+                        font-size: 2rem;
+                    }
+                }
+                .user-name{
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                }
+                
+            }
+            .show-following{
+                height: 4rem;
+                display: flex;
+                flex-direction: row;
+                .follow-nums{
+                    width: 33.33%;
+                    display: flex; 
+                    flex-direction: column;
+                    justify-content: center;
+                    align-items: center;              
+                }
+                .middle{
+                    border-left: 2px solid;
+                    border-right: 2px solid;
+                    border-color: rgb(233, 228, 228);
+                }
+            }
+        }
+        
         .title {
             width: 90%;
-            height: 3rem;
-            border-bottom: 1px solid;
+            height: 4rem;
+            border-bottom: 2px solid;
+            border-color: rgb(233, 228, 228);
             display: flex; 
             align-items: center; 
             justify-content: center;          
         }
 
-        .opinions-section {
+        .who-to-section {
             width: 90%;
             height: fit-content;
             // border: 1px solid;
@@ -258,23 +335,34 @@
             align-items: center;
             justify-content: center;
             margin: 5%;
-            .opinions-title {
-                width: 100%;                
-            }
-            .opinion-story {
+         
+            .who-to-story {
                 width: 100%;
                 display: flex;
                 flex-direction: row;
                 margin-bottom: 2rem;                
-                .opinion-profile {
+                .who-to-profile {
                     width: 4rem;
                     height: 4rem;
                     background-color: red;
                     border-radius: 2rem;
                     margin-right: 1rem;
                 }
-                .opinion-body {
+                .who-to-body {
                     width: 70%;
+                    .name-follow-wrapper{
+                        display: flex;
+                        flex-direction: row;
+                        .follow-link{
+                            background-color: green;
+                            width: 2rem;
+                            height: 1.5rem;
+                            border-radius: 0.5rem;
+                            align-items: center;
+                            text-align: center;
+                            margin-left: 0.5rem;
+                        }
+                    }
                 }
             }    
         }
