--- a/app/views/opinions/index.html.erb
+++ b/app/views/opinions/index.html.erb
@@ -11,11 +11,26 @@
           </div>          
         </div>
         <ul class = "main-links color-1">
-          <li class="main-link-lists font-fam"> <%= link_to 'HOME', root_path %> </li>
-          <li class="main-link-lists font-fam"> <%= link_to 'CONNECT', root_path %> </li>
-          <li class="main-link-lists font-fam"> <%= link_to 'DISCOVER', root_path %> </li>
-          <li class="main-link-lists font-fam"> <%= link_to 'PROFILE', root_path %> </li>
-          <li class="main-link-lists font-fam"> <%= link_to 'STATISTICS', root_path %></li>
+          <li class="main-link-lists font-fam"> 
+            <span class="iconify link-iconify" data-icon="clarity:home-solid" data-inline="false"></span>
+            <%= link_to 'HOME', root_path %> 
+          </li>
+          <li class="main-link-lists font-fam"> 
+            <span class="iconify link-iconify" data-icon="feather:at-sign" data-inline="false"></span>
+            <%= link_to 'CONNECT', root_path %> 
+          </li>
+          <li class="main-link-lists font-fam"> 
+            <span class="iconify link-iconify" data-icon="fa-solid:hashtag" data-inline="false"></span>
+            <%= link_to 'DISCOVER', root_path %> 
+          </li>
+          <li class="main-link-lists font-fam"> 
+            <span class="iconify link-iconify" data-icon="vs:profile" data-inline="false"></span>
+            <%= link_to 'PROFILE', root_path %> 
+          </li>
+          <li class="main-link-lists font-fam"> 
+            <span class="iconify link-iconify" data-icon="ant-design:pie-chart-filled" data-inline="false"></span>
+            <%= link_to 'STATISTICS', root_path %>
+          </li>
         </ul>
       </section>
       <section class = "middle-col">
@@ -25,7 +40,7 @@
 
         <section class = "opinion-section">
         <p id="notice"><%= notice %></p>
-          <span class="opinion-title">YOUR OPINION</span>
+          <span class="opinion-title font-fam">YOUR OPINION</span>
           
           <div class = "opinion-field">
             <%= render 'form', opinion: @opinion %>
@@ -34,12 +49,12 @@
         </section>
 
         <section class="opinions-section">
-          <span class="opinions-title">4 NEW OPINION</span>
+          <span class="opinions-title font-fam">4 NEW OPINION</span>
           
           <% @opinions.each do |opinion| %>
            <article class="opinion-story">
             <img class="opinion-profile"></img>
-            <div class = "opinion-body">
+            <div class = "opinion-body font-fam">
                 <h1> <%= opinion.author.fullname %> </h1>
                 <p> <%= opinion.text %> </p>
             </div>
@@ -53,13 +68,16 @@
         <div class = "title font-1">
           <span>WHO TO FOLLOW</span>          
         </div>
-        <div  class="opinions-section">
+        <div  class="who-to-section">
         <% @users.each do |user| %>
-          <article class="opinion-story">
-           <img class="opinion-profile"></img>
-           <div class = "opinion-body">
-               <h1> <%= user.fullname %> </h1>
-               <p> <%= user.followers.first %> </p>
+          <article class="who-to-story">
+           <img class="who-to-profile"></img>
+           <div class = "who-to-body">
+              <div class="name-follow-wrapper">
+               <h1> <%= link_to user.fullname, user_path(user) %> </h1>
+               <span class="follow-link font-fam color-2"> <%= link_to 'f', follow_user_path(user) %> </span>
+              </div>
+               <p> Followed by <%= user.followers.first %> </p>              
            </div>
           </article>
         <% end %>
