adds more stylings on the opionion index and user show pages and fixes bugs on following-user models associations

--- a/app/views/opinions/index.html.erb
+++ b/app/views/opinions/index.html.erb
@@ -48,7 +48,7 @@
 
         </section>
 
-        <section class="opinions-section">
+        <section class="opinions-section position-sticky">
           <span class="opinions-title font-fam">4 NEW OPINION</span>
           
           <% @opinions.each do |opinion| %>
