--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -63,6 +63,7 @@
     height: fit-content;
     display: flex;
     flex-direction: row;
+    padding: 0.01px;
     // background: #4FA0DF;
 
     .nav-left {
@@ -79,10 +80,11 @@
             margin-right: 1rem;       
             background-color: white;
             border-radius: 8px;
+            padding: 0.1px;
         }
-        // .username {            
-            
-        // }
+        .username {            
+           padding: 0.1px; 
+        }
 
     }
     .nav-middle {
@@ -161,6 +163,9 @@
                 margin-right: 0.5rem;
             }
         }
+        .main-link-lists:hover {
+            background-color: #4FA0DF;
+        }
      }
 
     .middle-col {
@@ -207,10 +212,41 @@
             }
             .opinion-field {
                 width: 90%;
-                height: 2rem;
-                border: 2px solid;
+                height: fit-content;
+                
                 margin-bottom: 1rem;
-                border-color: rgb(233, 228, 228);
+                padding: 0px;
+                
+                .form-inputs {
+                    width: 100%;
+                    height: fit-content;
+                    margin: 0px;
+                    padding: 0px;
+                    display: flex;
+                    justify-content: initial;
+                    border: 2px solid;
+                    border-color: #e9e4e4;
+                    padding: 0.5rem;
+                    .text {
+                        width: 100%;
+                        height: 1rem;
+                        border: none;
+                        margin: 0px;
+                    }
+                    .text:focus {
+                        border-color: #e9e4e4;
+                        height: 5rem;
+                        background-color: #F5F6F8;                        
+                        border-radius: 3px;
+                        outline: none;
+                        
+                        display: inline;
+                        justify-content: start;
+                    }
+                }
+                .form-actions {
+                    // visibility: hidden;
+                }
             }             
         }
 
@@ -226,6 +262,8 @@
             margin: 5%;
             border: 2px solid;
             border-color: rgb(233, 228, 228);
+            position: -webkit-sticky;
+
             .opinions-title {
                 width: 90%;
                 border-bottom: 2px solid;
