--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,26 +11,36 @@
     </div>          
   </div>
   <ul class = "main-links color-1">
-    <li class="main-link-lists font-fam"> 
-      <span class="iconify link-iconify" data-icon="clarity:home-solid" data-inline="false"></span>
-      <%= link_to 'HOME', root_path %> 
-    </li>
-    <li class="main-link-lists font-fam"> 
-      <span class="iconify link-iconify" data-icon="feather:at-sign" data-inline="false"></span>
-      <%= link_to 'CONNECT', root_path %> 
-    </li>
-    <li class="main-link-lists font-fam"> 
-      <span class="iconify link-iconify" data-icon="fa-solid:hashtag" data-inline="false"></span>
-      <%= link_to 'DISCOVER', root_path %> 
-    </li>
-    <li class="main-link-lists font-fam"> 
-      <span class="iconify link-iconify" data-icon="vs:profile" data-inline="false"></span>
-      <%= link_to 'PROFILE', root_path %> 
-    </li>
-    <li class="main-link-lists font-fam"> 
-      <span class="iconify link-iconify" data-icon="ant-design:pie-chart-filled" data-inline="false"></span>
-      <%= link_to 'STATISTICS', root_path %>
-    </li>
+    <a href="<%= root_path %>" >
+      <li class="main-link-lists font-fam">     
+        <span class="iconify link-iconify" data-icon="clarity:home-solid" data-inline="false"></span>
+        <span> HOME </span>
+      </li>
+    </a>
+    <a href="<%= root_path %>" >
+      <li class="main-link-lists font-fam"> 
+        <span class="iconify link-iconify" data-icon="feather:at-sign" data-inline="false"></span>
+        <span> CONNECT </span> 
+      </li>
+    </a>
+    <a href="<%= root_path %>" >
+      <li class="main-link-lists font-fam"> 
+        <span class="iconify link-iconify" data-icon="fa-solid:hashtag" data-inline="false"></span>
+        <span> DISCOVER </span> 
+      </li>
+    </a>
+    <a href="<%= root_path %>" >
+      <li class="main-link-lists font-fam"> 
+        <span class="iconify link-iconify" data-icon="vs:profile" data-inline="false"></span>
+        <span> PROFILE </span>
+      </li>
+    </a>
+    <a href="<%= root_path %>" >
+      <li class="main-link-lists font-fam"> 
+        <span class="iconify link-iconify" data-icon="ant-design:pie-chart-filled" data-inline="false"></span>
+        <span> STATISTICS </span>
+      </li>
+    </a>
   </ul>
 </section>
 <section class = "middle-col">
@@ -70,7 +80,9 @@
   <div class="show-profile" >
         <div class="show-article">
             <div class="photo-wrapper">
+            <a href="<%= follow_user_path(@user) %>">
                 <span class="iconify" data-icon="carbon:add-alt" data-inline="false"></span>
+            </a>             
                 <img class="user-img"> </img>
                 <span class="iconify" data-icon="ion:list-circle-outline" data-inline="false"></span>
             </div>
